# copick

./: .gitignore  .pre-commit-config.yaml  .release-please.manifest.json  404.html  CHANGELOG.md  LICENSE  README.md  copick_abstract_API_tech_spec.md  copick_cache_tech_spec.md  copick_cryoet_portal_tech_spec.md  copick_filesystem_tech_spec.md  copick_multilayer tech spec..md  copick_multilayer_tech_spec.md  copick_sqlite_db_tech_spec.md  copick_tech_spec_backup.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  release-please.config.json  search.json  zensical.toml
.github/: dependabot.yml
.github/workflows/: build-and-deploy-docs.yml  conventional-commits.yml  py-formatting.yml  release-please.yml  test.yml
api_reference/api/: index.html
api_reference/copick_torch/augmentations/: index.html
api_reference/copick_torch/datasets/: index.html
api_reference/copick_torch/filters_fitting/: index.html
api_reference/copick_torch/samplers/: index.html
api_reference/copick_utils/converters/: index.html
api_reference/copick_utils/features_pickers/: index.html
api_reference/copick_utils/io/: index.html
api_reference/copick_utils/logical/: index.html
api_reference/copick_utils/process/: index.html
api_reference/functional/add/: index.html
api_reference/functional/get/: index.html
api_reference/functional/open/: index.html
api_reference/functional/run/: index.html
api_reference/functional/stats/: index.html
api_reference/functional/sync/: index.html
api_reference/implementations/Croissant/: index.html
api_reference/implementations/Dataportal/: index.html
api_reference/implementations/Filesystem/: index.html
api_reference/implementations/Overlay/: index.html
citation/: index.html
cli/: index.html
cli/add/: index.html
cli/add/object/: index.html
cli/add/object-volume/: index.html
cli/add/picks/: index.html
cli/add/picks-dynamo/: index.html
cli/add/picks-em/: index.html
cli/add/picks-relion/: index.html
cli/add/segmentation/: index.html
cli/add/tomogram/: index.html
cli/add/tomograms-dynamo/: index.html
cli/add/tomograms-relion/: index.html
cli/browse/: index.html
cli/config/: index.html
cli/config/append-croissant/: index.html
cli/config/dataportal/: index.html
cli/config/export-croissant/: index.html
cli/config/filesystem/: index.html
cli/config/mlcroissant/: index.html
cli/config/set-splits/: index.html
cli/convert/: index.html
cli/convert/mesh2caps/: index.html
cli/convert/mesh2picks/: index.html
cli/convert/mesh2seg/: index.html
cli/convert/nnunet/: index.html
cli/convert/picks2ellipsoid/: index.html
cli/convert/picks2mesh/: index.html
cli/convert/picks2plane/: index.html
cli/convert/picks2seg/: index.html
cli/convert/picks2slab/: index.html
cli/convert/picks2sphere/: index.html
cli/convert/picks2surface/: index.html
cli/convert/seg2mesh/: index.html
cli/convert/seg2picks/: index.html
cli/convert/seg2slab/: index.html
cli/cp/: index.html
cli/deposit/: index.html
cli/download/: index.html
cli/download/project/: index.html
cli/export/: index.html
cli/export/picks/: index.html
cli/export/segmentation/: index.html
cli/export/tomogram/: index.html
cli/inference/: index.html
cli/inference/easymode/: index.html
cli/inference/membrain-seg/: index.html
cli/inference/nnunet/: index.html
cli/info/: index.html
cli/logical/: index.html
cli/logical/clipmesh/: index.html
cli/logical/clippicks/: index.html
cli/logical/clipseg/: index.html
cli/logical/enclosed/: index.html
cli/mv/: index.html
cli/new/: index.html
cli/process/: index.html
cli/rm/: index.html
cli/setup/: index.html
cli/stats/: index.html
cli/sync/: index.html
cli/training/: index.html
cli_editorial/: index.html
concepts/: index.html
contributing/: index.html
datamodel/: index.html
docs/: citation.md  cli.md  contributing.md  datamodel.md  gallery.md  geometry.md  index.md  processing_tools.md  quickstart.md  tools.md
docs/api_reference/: api.md
docs/cli/: browse.md  cp.md  deposit.md  index.md  info.md  mv.md  rm.md
docs/cli_editorial/: index.md
docs/concepts/: index.md
docs/examples/: overview.md  snippets.md
docs/gallery/: Makefile  README.md  __init__.py  chimerax.py  driver.py  schema.py
docs/get-started/: index.md
docs/javascripts/: ba_slider.js
docs/snippets/: cookiecutter.py  ecosystem_carousel.snippet  features_read_image.py  object_read_map.py  point_read.py  processing_carousel.snippet  root_list_objects_runs.py  run_list_segmentations.py  segmentation_read_image.py  solution_random_points.py  tomogram_read_image.py  voxel_spacing_list_tomograms.py
docs/stylesheets/: extra.css
examples/: index.html
examples/overview/: index.html
examples/snippets/: index.html
gallery/: index.html
geometry/: index.html
get-started/: index.html
javascripts/: home_carousel.js
processing_tools/: index.html
quickstart/: index.html
search/: search_index.json
snippets/: mesh_read.py  processing_carousel.snippet  segmentation_read_image.py
src/copick/: QCoPickModel.py  __init__.py  copick_fsspec.py  copick_models.py  db_models.py  meta_models.py  metadata.py  models.py
stylesheets/: extra.css  openmoji.css
templates/configs/: overlay_s3_static_local.json  overlay_s3_static_ssh.json  overlay_smb.json  overlay_ssh_static_smb.json
tests/: conftest.py  docker-compose.yml  seed_moto.sh  seed_smb.sh  seed_ssh.sh  test_cache_cli.py  test_cli.py  test_cryoet_data_portal.py  test_delete_overwrite.py  test_deposit.py  test_deprecation_helpers.py  test_escape.py  test_filesystem.py  test_import_export.py  test_mlcroissant.py  test_object_models.py  test_ontology.py  test_ops_add.py  test_ops_export.py  test_portal_cache.py  test_reconnecting_fs.py  test_run_names_option.py  test_sync_cli.py  test_sync_ops.py  test_uri.py
tests/scripts/: README.md  regenerate_sample_zip.py
tools/: index.html
util/gallery/: .gitignore  Makefile  README.md  __init__.py  cxc.py  driver.py  fixtures.py  geometry.py  palette.py  runner.py  specs.py
(+329 files in other folders)
