[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "copick"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
]
#dynamic = ["version"]
version = "0.4.0"
dependencies = [
    "fsspec",
    "pydantic",
    "numpy",
    "trimesh",
    "zarr",
]
authors = [
  {name = "Utz H. Ermel", email = "utz.ermel@czii.org"},
  {name = "Kyle I. S. Harrington", email = "kyle@kyleharrington.com"},
]
description = "Definitions for a collaborative cryoET annotation tool."
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["cryoet", "cryo-et", "tomography", "annotation", "segmentation", "collaborative", "copick"]

[project.urls]
Repository = "https://github.com/uermel/copick.git"
Issues = "https://github.com/uermel/copick/issues"

[project.optional-dependencies]
s3 = ["s3fs"]
smb = ["smbprotocol"]
ssh = ["sshfs"]
test = [
    "pytest",
    "pytest-cov",
    "pooch",
]
dev = [
    "black",
    "ipython",
    "pre-commit",
    "ruff",
    "notebook",
]

#[tool.hatch.version]
#source = "copick/__init__.py"
#fallback-version = "0.3.0"

[tool.black]
line-length = 120
target_version = ['py311']

[tool.ruff]
select = [
    "E", "W",  # pycodestyle
    "F",       # pyflakes
    "B",       # bugbear
    "I",       # isort
    "N",       # pep8-naming
    "ASYNC",   # async
    "COM",     # commas
    "C4",      # comprehensions
    "DTZ",     # datetimez
    "ISC",     # implicit-str-concat
    "G",       # logging-format
    "T20",     # print
    "SIM",     # simplify
]
ignore = [
    "W293",   # blank line contains whitespace
    "B008",   # Do not perform calls in argument defaults
    "N802",   # Function name should be lowercase
    "N805",   # First argument of a method should be named `self`
    "N806",   # Variable in function should be lowercase
    "N999",   # Invalid module name
    "E501",   # line too long
    "C408",   # rewrite empty built-ins as literals
    "T201",   # print statements.
    "DTZ007", # Datetime objects without timezones.
    "DTZ005", # More datetimes without timezones.
]
line-length = 120
target-version = "py311"

[tool.ruff.isort]
known-first-party =["common"]

[tool.ruff.flake8-quotes]
docstring-quotes = "double"

[tool.mypy]
show_error_codes = true
ignore_missing_imports = true
warn_unreachable = true
strict = true
plugins = [
  "pydantic.mypy"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "@overload",
    "except ImportError",
    "pass",
]
